[chore]: fix text-align property

--- a/src/index.css
+++ b/src/index.css
@@ -126,4 +126,5 @@ button:focus-visible {
   max-width: var(--max-width);
   margin: 0 auto;
   padding: var(--spacing-double);
+  text-align: center;
 }
